[package]
name = "rust-cloud-discovery"
version = "0.1.0"
authors = ["Md Sarowar Alam <sarowar.cse@gmail.com>"]
edition = "2018"
license = "MIT"
readme = "README.md"
repository = "https://github.com/eipi1/rust-cloud-discovery"
description = """
Cloud Discovery client in rust
"""
categories = ["network-programming"]
keywords = ["cloud", "discovery"]

[dependencies]
getset = "0.1"
async-trait = "0.1"
serde = { version = "1.0", features = ["derive"] }